My third upload for the source codes

--- a/box-sizing.html
+++ b/box-sizing.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/box-sizing.css">
 </head>
 <body>
-  
+  <p>This is another example for box-sizing</p>
     <div class="box_sizing-box">
         <p>Hello Kredo Japan</p>
 
